seperate patient and reading in ReadingActivity.java